  Lamego)
- Added set::options::allow-part-if-shunned. Sometimes shunned users close a channel
  window, most irc clients just close the window immediately and send a part msg..
  they don't wait for the server to confirm the part and thus the user thinks he has left
  the channel while in fact he has not... this can be annoying if you are temporarely
  shunning n00bs for a few minutes, they won't understand why they get a 'You are already
  on that channel' error msg when they try to join that chan again.
  This is however disabled by default because the idea of shun is to totally shun a user
  so (s)he can't do anything except /admin (and thus not causing "any" [server]traffic).
  Suggested by brentos. Note that we won't support /quit, or any other command, just this.
- Module coders: Moved call to HOOKTYPE_LOCAL_JOIN down to where the JOIN, NAMES, etc
  are already sent... this seems to make more sense since we have a prejoin hook now.
- Fixed bug where color quits were stripped when they shouldn't be >:).
- Added 'action' field to ban version { } which can be: kill: kills the user (default),
  tempshun: shun the specific connection only, kline/zline/gline/gzline/shun: place
  a ban on *@IP. Time of those bans can be specified in set::ban-version-tkl-time.
  It's up to the admin to take a good decision, sometimes zlines are best (=won't use
  much sockets but will reconnect quite quickly), sometimes tempshun (=will use 1 socket
  but generates nearly no network traffic), sometimes klines/glines, etc..
- Added sendto_umode_raw, sends to umodes, but not as a NOTICE
- Added hook HOOKTYPE_CHANNEL_CREATE (cptr(user creating channel), chptr
  (channel that has gotten created)
- Added hook HOOKTYPE_CHANNEL_DESTROY (chptr (channel getting destroyed))
- Fixed bug where unregistered quits would in extreme cases crash the server
- Moved it a bit too far (outside the loop), should be fixed now.
