@@ -2514,6 +2514,7 @@ seen. gmtime warning still there
   Suggested by brentos. Note that we won't support /quit, or any other command, just this.
 - Module coders: Moved call to HOOKTYPE_LOCAL_JOIN down to where the JOIN, NAMES, etc
   are already sent... this seems to make more sense since we have a prejoin hook now.
+- Moved it a bit too far (outside the loop), should be fixed now.
 - Fixed bug where color quits were stripped when they shouldn't be >:).
 - Added 'action' field to ban version { } which can be: kill: kills the user (default),
   tempshun: shun the specific connection only, kline/zline/gline/gzline/shun: place
@@ -2525,6 +2526,12 @@ seen. gmtime warning still there
 - Added hook HOOKTYPE_CHANNEL_CREATE (cptr(user creating channel), chptr
   (channel that has gotten created)
 - Added hook HOOKTYPE_CHANNEL_DESTROY (chptr (channel getting destroyed))
-- Fixed bug where unregistered quits would in extreme cases crash the server
-- Moved it a bit too far (outside the loop), should be fixed now.
-
+- Minor doc updates regarding snomasks reported by Stoebi (#0001324).
+- Fixed two OperOverride kick bugs:
+  - If ircop is +h and victim is +h it would deny it, reported by Special (#0001308)
+  - Ircops (all except netadmin) had trouble kicking +q people, if the ircop isn't
+    op'ed he can kick them, but if he has +o he can't. Reported by Michi (#0001012).
+  If you use mixed unreal versions you can get desynch problems if you use those
+  fixed things (like kick a +h if you are +h) because older servers will still block
+  the kick. You will receive a 'You cannot kick channel' message from every older
+  server so you'll at least be notified ;p.
